--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "This app visualize fractal shape, running on modern browsers.",
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "==7.32.0",
@@ -13,18 +14,21 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.4.0",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0",
-    "typescript": "^4.5.4"
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "start": "webpack-dev-server -d source-map",
     "build": "webpack --mode=production",
-    "lint": "eslint --ext=ts,tsx src"
+    "lint": "eslint --ext=ts,tsx src",
+    "test": "npx jest"
   },
   "keywords": [
     "Fractal",
