--- a/package.json
+++ b/package.json
@@ -6,27 +6,23 @@
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
-    "eslint": "==7.32.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
     "ts-jest": "^27.1.4",
-    "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0"
+    "vite": "^2.9.2"
   },
   "scripts": {
-    "start": "webpack-dev-server -d source-map",
-    "build": "webpack --mode=production",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint --ext=ts,tsx src",
     "test": "npx jest"
   },
