--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
   },
+  "engines": {
+    "node": ">= 16"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
