--- a/package.json
+++ b/package.json
@@ -3,16 +3,9 @@
   "version": "0.3.4",
   "description": "This app visualize fractal shape, running on modern browsers.",
   "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
     "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jest": "^29.7.0",
-    "prettier": "^3.2.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
@@ -24,8 +17,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext=ts,tsx src",
-    "lint:fix": "eslint --ext=ts,tsx src && prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "npx @biomejs/biome lint .",
+    "lint:fix": "npx @biomejs/biome check --apply .",
     "test": "npx jest"
   },
   "keywords": [
