--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "fractal-visualizer",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "This app visualize fractal shape, running on modern browsers.",
   "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
-    "@types/jest": "^29.5.11",
+    "@biomejs/biome": "^1.9.4",
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.13"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.6"
   },
   "engines": {
-    "node": ">= 18"
+    "node": ">= 20"
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --noemit && vite build",
     "preview": "vite preview",
     "lint": "npx @biomejs/biome lint .",
-    "lint:fix": "npx @biomejs/biome check --apply .",
+    "lint:fix": "npx @biomejs/biome check --write .",
     "test": "npx jest"
   },
   "keywords": [
